-modified Find class to apply the factory method on Find.java class